--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,27 @@
 body {
   margin: 10px 20px;
 }
+*{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+body{
+  font-family: Helvetica;
+  -webkit-font-smoothing: antialiased;
+  background: #ffffff;
+}
+h1, h3{
+  text-align: center;
+  font-size: 26px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: rgba( 71, 147, 227, 1);
+  padding: 30px 0;
+}
+h3 {
+  text-align: left;
+  font-size: 18px;
+  padding: 0;
+  text-transform: none;
+}
